added basic pages

--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!--Linking to index.css -->
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-<div align="center">
-  <h1>Freshly Squeezed Orange Cassidy!</h1>
-</div>
+  <header class="header" role="banner">
+    <img src="images/banner.jpg" alt="Orange Cassidy Banner"/>
+  </header>
   <title>Home</title>
   <div class="row">
-  <div class="col-sm-4" style="background-color:black;">
-    <p><a href=about>About</a></p>
+  <div class="col-lg-3" style="background-color:black;">
+    <p><a href=about.html>About</a></p>
   </div>
-  <div class="col-sm-4" style="background-color:black;">Title Wins</div>
-  <div class="col-sm-4" style="background-color:black;">Contact</div>
+  <div class="col-lg-3" style="background-color:black;">
+    <p><a href=title_wins.html>Title Wins</a></p>
+  </div>
+  <div class="col-lg-3" style="background-color:black;">
+    <p><a href=contact.html>Contact</a></p></div>
+  <div class="col-lg-3" style="background-color:black;">
+    <p><a href=https://www.prowrestlingtees.com/wrestler-t-shirts/orangecassidy.html>Shop</a></p></div>
 </body>
 <footer>
 </footer>
