Finished Setting Up

--- a/index.html
+++ b/index.html
@@ -6,22 +6,35 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
+  <body style="background-color:black;">
   <header class="header" role="banner">
     <img src="images/banner.jpg" alt="Orange Cassidy Banner"/>
   </header>
   <title>Home</title>
+  <body style="background-color:white;">
   <div class="row">
   <div class="col-lg-3" style="background-color:black;">
-    <p><a href=about.html>About</a></p>
+    <a href="about.html"><h4><font color="white">About</font></h4></a>
   </div>
   <div class="col-lg-3" style="background-color:black;">
-    <p><a href=title_wins.html>Title Wins</a></p>
+    <a href="title_wins.html"><h4><font color="white">Title Wins</font></h4></a>
   </div>
   <div class="col-lg-3" style="background-color:black;">
-    <p><a href=contact.html>Contact</a></p></div>
+    <a href="highlights.html"><h4><font color="white">Highlights</font></h4></a></div>
   <div class="col-lg-3" style="background-color:black;">
-    <p><a href=https://www.prowrestlingtees.com/wrestler-t-shirts/orangecassidy.html>Shop</a></p></div>
+    <a href="https://www.prowrestlingtees.com/wrestler-t-shirts/orangecassidy.html"><h4><font color="white">Shop</font></h4></a>
+    </div>
+    <br>
+    <h1><font color = "white">Freshly Squeezed Orange Cassidy!</font></h1><br>
+    <img src="images/orange-cassidy-shirt.jpg" alt="Orange Cassidy Shirt" style="width:50%;">
 </body>
 <footer>
+  <div class="footer">
+    <h3>Social Media</h3>
+    <br>
+    <a href= "https://twitter.com/orangecassidy?lang=en"><h3><font color= "white">Twitter: @orangecassidy</font></h3></a>
+    <a href="https://www.instagram.com/orangecassidy/?hl=en"><h3><font color = "white">Instagram: @orangecassidy</font></h3></a>
+    <a href="https://orangecassidy.com/"><h3><font color = "white">View the Official Site</font></h3></a>
+  </div>
 </footer>
 </html>
