--- a/highlights.html
+++ b/highlights.html
@@ -21,7 +21,7 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <video width="1025" height="500" controls>
-    <source src="videos/oc-clip-1.mp4" type="video/mp4">
+    <source src="videos/oc-clip-1.MP4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
   </div>
